--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
         with:
             node-version: '18'
             cache: 'pnpm'
-      - run: pnpm install --no-frozen-lockfile
+      - run: pnpm install
       - name: Apply all pending migrations to the database
         run: pnpm prisma migrate deploy
         env:
