CU-86by25nnv - Make docker image for project

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-POSTGRES_PRISMA_URL="postgres://username:password@127.0.0.1:5432/examonapi"
-POSTGRES_URL_NON_POOLING="postgres://username:password@127.0.0.1:5432/examonapi"
+POSTGRES_PRISMA_URL="postgres://postgres:postgres@postgres:5432/examonapi" # Change it if you are not using docker
+POSTGRES_URL_NON_POOLING="postgres://postgres:postgres@postgres:5432/examonapi" # Change it if you are not using docker
 JWT_SECRET="potato"
