CU-86by13chy - add extra auth functionalities like forget-password and logout

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,9 @@
 POSTGRES_PRISMA_URL="postgres://postgres:postgres@postgres:5432/examonapi" # Change it if you are not using docker
 POSTGRES_URL_NON_POOLING="postgres://postgres:postgres@postgres:5432/examonapi" # Change it if you are not using docker
 JWT_SECRET="potato"
+
+# Email Sending
+EMAIL_HOST="smtp.example.com"
+EMAIL_PORT=465
+EMAIL_USER="admin@example.com"
+EMAIL_PASSWORD="password"
