--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,7 @@ services:
       - postgres
     volumes:
       - ./src:/app/src
+      - ./prisma:/app/prisma
 
   pgadmin:
     image: dpage/pgadmin4
