--- a/.env.example
+++ b/.env.example
@@ -11,5 +11,5 @@ JWT_SECRET="potato"
 # Email Sending
 EMAIL_HOST="smtp.example.com"
 EMAIL_PORT=465
-EMAIL_USER="admin@example.com"
-EMAIL_PASSWORD="password"
+EMAIL_USER="examon375@example.com"
+EMAIL_PASSWORD="uixfaoyadjdeiomp"
